# bookFactory

./: .env.example  .gitignore  BookFactory_Guncel_Kurulum_Rehberi.md  CHANGELOG.md  LLM_PROJECT_BRIEF.md  PROJECT_BRIEF.md  README.md  RELEASE_CHECKLIST.md  STUDIO_PATHFIX_README.md  STUDIO_V3_1_2_UTF8_OUTLINE_PATCH_README.md  STUDIO_V3_1_3_MANIFEST_EDITOR_PATCH_README.md  alet_cantasi.txt  bolum_2_baslangic_promptu.md  book_manifest.yaml  brief_environment.md  brief_loading_order.md  brief_react_context.md  brief_standards.md  brief_structure.md  gelistirme_onerileri.md  gui_iyilesitrme_promptu.md  package_manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_studio.bat  run_studio.ps1
.claude/: settings.local.json
.devcontainer/: devcontainer.json
bookfactory/: __init__.py  __main__.py  cli.py
bookfactory-gui/: README.md  extension.js  package.json  panel.html
bookfactory_studio/: __init__.py  app.py  core.py  jobs.py  models.py
configs/: book_factory_config.yaml  post_production_profile.template.yaml  post_production_profile_java_fundamentals.yaml  post_production_profile_studio.yaml
core/: 00_llm_execution_contract.md  01_book_manifest_schema.md  02_general_system_prompt.md  03_output_format_standard.md  04_chapter_structure_standard.md  05_chapter_input_generator_prompt.md  06_outline_review_prompt.md  07_full_text_generation_prompt.md  08_quality_gate_contract.md  09_manual_asset_override_policy.md  10_multilingual_generation_policy.md  11_approval_gate_policy.md  12_project_starter_prompt.md  13_post_production_pipeline_standard.md  (+3 more)
(+164 files in other folders)
